--- a/Frontend/src/App.css
+++ b/Frontend/src/App.css
@@ -524,7 +524,7 @@ button:hover {
 
 .upload-video-container form button {
   padding: 0.8rem;
-  background-color: #2ecc71;
+  background: linear-gradient(to right, #4e54c8, #8f94fb);
   color: white;
   border: none;
   border-radius: 6px;
@@ -862,5 +862,88 @@ tr:hover {
 
   .content-box {
     grid-template-columns: 1fr;
+  }
+}
+
+.video-player{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 100Vh;
+  
+}
+
+.empty{
+  height: 60vh;
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  
+}
+
+.crete{
+  height: 60vh;
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+  justify-content: center;
+  align-items: center;
+}
+
+.crete button {
+  padding: 0.5rem;
+  background: linear-gradient(to right, #4e54c8, #8f94fb);
+  border: none;
+  color: white;
+  font-weight: 600;
+  text-transform: uppercase;
+  font-size: 1rem;
+  border-radius: 8px;
+  margin-top: 1rem;
+}
+
+
+.loader-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  height: 70vh;
+}
+
+
+.spinner {
+  width: 60px;
+  height: 60px;
+  border-radius: 50%;
+  border: 4px solid transparent;
+  border-top: 4px solid transparent;
+
+  background: conic-gradient(
+    from 0deg,
+    #feda75,
+    #fa7e1e,
+    #d62976,
+    #962fbf,
+    #4f5bd5,
+    #feda75
+  );
+
+  -webkit-mask: 
+    radial-gradient(farthest-side, transparent calc(100% - 4px), black 0);
+  mask: 
+    radial-gradient(farthest-side, transparent calc(100% - 4px), black 0);
+
+  animation: insta-spin 1s linear infinite;
+}
+
+@keyframes insta-spin {
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(360deg);
   }
 }
